@@ -29,7 +29,6 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -1051,7 +1050,7 @@ public abstract class HTTPConduit
 
         protected String conduitName;
         
-        protected String url;
+        protected URI url;
 
         protected WrappedOutputStream(
                 Message outMessage, 
@@ -1059,7 +1058,7 @@ public abstract class HTTPConduit
                 boolean isChunking,
                 int chunkThreshold,
                 String conduitName,
-                String url
+                URI url
         ) {
             super(chunkThreshold);
             this.outMessage = outMessage;
@@ -1312,7 +1311,7 @@ public abstract class HTTPConduit
                 handleHttpRetryException(e);
             } catch (IOException e) {
                 String origMessage = e.getMessage();
-                if (origMessage != null && origMessage.contains(url)) {
+                if (origMessage != null && origMessage.contains(url.toString())) {
                     throw e;
                 }
                 throw mapException(e.getClass().getSimpleName() 
@@ -1404,7 +1403,7 @@ public abstract class HTTPConduit
             updateResponseHeaders(m);
             String newURL = extractLocation(Headers.getSetProtocolHeaders(m));
 
-            detectRedirectLoop(getConduitName(), url, newURL, outMessage);
+            detectRedirectLoop(getConduitName(), url.toString(), newURL, outMessage);
             if (newURL != null) {
                 new Headers(outMessage).removeAuthorizationHeaders();
                 
@@ -1437,12 +1436,7 @@ public abstract class HTTPConduit
             Message m = new MessageImpl();
             updateResponseHeaders(m);
             HttpAuthHeader authHeader = new HttpAuthHeader(Headers.getSetProtocolHeaders(m).get("WWW-Authenticate"));
-            URI currentURI;
-            try {
-                currentURI = new URI(url);
-            } catch (URISyntaxException e) {
-                throw new IOException(e);
-            }
+            URI currentURI = url;
             String realm = authHeader.getRealm();
             detectAuthorizationLoop(getConduitName(), outMessage, currentURI, realm);
             AuthorizationPolicy effectiveAthPolicy = getEffectiveAuthPolicy(outMessage);
@@ -1461,7 +1455,7 @@ public abstract class HTTPConduit
             }
             new Headers(outMessage).setAuthorization(authorizationToken);
             cookies.writeToMessageHeaders(outMessage);
-            retransmit(url);
+            retransmit(url.toString());
             return true;
         }
 
@@ -1528,7 +1522,7 @@ public abstract class HTTPConduit
             boolean noExceptions = MessageUtils.isTrue(outMessage.getContextualProperty(
                 "org.apache.cxf.http.no_io_exceptions"));
             if (responseCode >= 400 && responseCode != 500 && !noExceptions) {
-                throw new HTTPException(responseCode, getResponseMessage(), new URL(url));
+                throw new HTTPException(responseCode, getResponseMessage(), url.toURL());
             }
 
             InputStream in = null;
@@ -1541,7 +1535,7 @@ public abstract class HTTPConduit
                     // partial response
                     closeInputStream();
                     if (isOneway(exchange) && responseCode > 300) {
-                        throw new HTTPException(responseCode, getResponseMessage(), new URL(url));
+                        throw new HTTPException(responseCode, getResponseMessage(), url.toURL());
                     }
                     ClientCallback cc = exchange.get(ClientCallback.class);
                     if (null != cc) {
@@ -1663,7 +1657,7 @@ public abstract class HTTPConduit
             if (trustDecider != null || decider2 != null) {
                 try {
                     // We must connect or we will not get the credentials.
-                    // The call is (said to be) ingored internally if
+                    // The call is (said to be) ignored internally if
                     // already connected.
                     HttpsURLConnectionInfo info = getHttpsURLConnectionInfo();
                     if (trustDecider != null) {
